--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "fetch and display favicon from website url",
   "main": "src/index.js",
   "scripts": {
-    "server": "UV_THREADPOOL_SIZE=100 node node_modules/.bin/webpack-dev-server --inline --colors --display-error-details --display-cached --port 3000 ",
+    "server": "UV_THREADPOOL_SIZE=100 node node_modules/.bin/webpack-dev-server --inline --colors --display-error-details --display-cached --port 3001 ",
     "start": "npm run server"
   },
   "repository": {
@@ -34,6 +34,7 @@
   "dependencies": {
     "babel-preset-react": "^6.5.0",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "rx-dom": "^7.0.3"
   }
 }
