--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "server": "UV_THREADPOOL_SIZE=100 node node_modules/.bin/webpack-dev-server --inline --colors --display-error-details --display-cached --port 3001 ",
-    "start": "npm run server"
+    "start": "npm run server",
+    "release": "UV_THREADPOOL_SIZE=100  NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
