--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "fetch and display favicon from website url",
   "main": "src/index.js",
   "scripts": {
+    "test": "jest",
     "server": "UV_THREADPOOL_SIZE=100 node node_modules/.bin/webpack-dev-server --inline --colors --display-error-details --display-cached --port 3001 ",
     "start": "npm run server",
     "release": "UV_THREADPOOL_SIZE=100  NODE_ENV=production webpack"
@@ -25,9 +26,14 @@
   "homepage": "https://github.com/nlarche/web-icon#readme",
   "devDependencies": {
     "babel-core": "^6.7.4",
+    "babel-jest": "^9.0.3",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "jest-cli": "^0.9.2",
+    "react-addons-test-utils": "^0.14.7",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
@@ -37,5 +43,13 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "rx-dom": "^7.0.3"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/preprocessor.js",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils"
+    ]
   }
 }
