TEST update preprocessor

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "rx-dom": "^7.0.3"
   },
   "jest": {
-    "scriptPreprocessor": "<rootDir>/preprocessor.js",
+    "scriptPreprocessor": "<rootDir>/test/preprocessor.js",
     "unmockedModulePathPatterns": [
       "<rootDir>/node_modules/react",
       "<rootDir>/node_modules/react-dom",
