--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "web-icon",
-  "version": "1.0.0",
+  "version" : "0.0.0",
   "description": "fetch and display favicon from website url",
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
     "server": "UV_THREADPOOL_SIZE=100 node node_modules/.bin/webpack-dev-server --inline --colors --display-error-details --display-cached --port 3001 ",
     "start": "npm run server",
-    "release": "UV_THREADPOOL_SIZE=100  NODE_ENV=production webpack"
+    "release": "UV_THREADPOOL_SIZE=100  NODE_ENV=production webpack",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nlarche/web-icon.git"
+    "url": "https://github.com/nlarche/web-icon.git"
   },
   "keywords": [
     "favicon",
@@ -36,7 +37,8 @@
     "react-addons-test-utils": "^0.14.7",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "semantic-release": "^4.3.5"
   },
   "dependencies": {
     "babel-preset-react": "^6.5.0",
