--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "jest-cli": "^0.9.2",
     "react-addons-test-utils": "^0.14.7",
     "semantic-release": "^4.3.5",
-    "style-loader": "^0.13.1",
+    "style-loader": "magalhas/style-loader#6ffa6df",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
